--- a/frontend/src/shared/ui/Button/Button.scss
+++ b/frontend/src/shared/ui/Button/Button.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
 
 .button {
   display: inline-flex;
@@ -53,6 +54,15 @@
       cursor: not-allowed;
     }
   }
+  
+  &--liquid {
+    @include liquid-glass;
+
+    &:hover {
+      @include liquid-glass-hover
+    }
+  }
+
 
   &--secondary {
     background: transparent;
