--- a/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
+++ b/frontend/src/pages/profile/components/ProfileInfoCard/ProfileInfoCard.scss
@@ -38,7 +38,6 @@
   }
 
   &__label {
-
     font-weight: 400;
     font-size: 13px;
     line-height: 1.2;
@@ -46,7 +45,6 @@
   }
 
   &__value {
-
     font-weight: 400;
     font-size: 16px;
     line-height: 1.3;
@@ -64,7 +62,6 @@
   }
 
   &__bio-text {
-
     font-weight: 400;
     font-size: 16px;
     line-height: 1.4;
@@ -95,7 +92,7 @@
     gap: 4px;
     padding: 7px 14px;
     background: #f5e5ea;
-    border-color: #cd2b2b;
+    border-color: #f1d2d7;
     color: #cd2b2b;
     border-radius: 13.5px;
     font-weight: 400;
@@ -105,5 +102,14 @@
 
   &__tag-icon {
     font-size: 12px;
+  }
+}
+
+[data-theme="dark"] {
+  .profile-info-cards {
+    &__tag {
+      background: #352525;
+      border-color: #442626;
+    }
   }
 }
