--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,10 @@
 @use "./shared/styles/variables" as *;
 @use "./shared/styles/mixins" as *;
 
+html, body {
+  overscroll-behavior-y: none;
+}
+
 .app {
   min-height: 100vh;
   min-height: 100dvh;
