--- a/frontend/src/shared/ui/Avatar/Avatar.scss
+++ b/frontend/src/shared/ui/Avatar/Avatar.scss
@@ -9,8 +9,8 @@
     position: absolute;
     top: 0;
     left: -1.5px;
-    width: 89px;
-    height: 91px;
+    width: 100%;
+    height: 100%;
     border-radius: 85px;
     filter: blur(15px);
     opacity: 0.5;
