Исправлен стили тапбара

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -209,6 +209,7 @@
   &__page-switcher {
     &--desktop {
       display: block;
+      width: 473.05px;
 
       @media (max-width: 768px) {
         display: none;
